# task-cli-py

./: .gitignore  README.md  pyproject.toml  setup.py
task_cli/: cli.py  task_manager.py
task_cli.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py
