[tool.poetry]
name = "task-cli"
version = "0.1.0"
description = "A simple task manager CLI"
authors = ["jupelaz <jupelaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
task-cli = "task_cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"